--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,6 @@
     font-family: 'poppins', sans-serif;
     box-sizing: border-box;
 }
-
 body {
     background-color: #222;
 }
@@ -81,4 +80,14 @@ body {
 .humidity, .wind {
     font-size: 28px;
     margin-top: -6px;
+}
+.weather {
+    display: none;
+}
+.error {
+    text-align: left;
+    margin-left: 10px;
+    font-size: 14px;
+    margin-top: 10px;
+    display: none;
 }
